burger alignment fixed

--- a/Natural Neighborhood Network/css/main.css
+++ b/Natural Neighborhood Network/css/main.css
@@ -205,8 +205,9 @@ svg {
     display: none;
     position: absolute;
     background-color: white;
-    width: 100%;
+    width: min-content;
     z-index: 1;
+    right: 0;
   }
 
 .hidden-dropdown:hover .dropdown-burger {display: block;} 
